# Mikompilation

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: Build-Linux.yml  Build.yml  LinuxBuild.yml  OSXBuild.yml  cmake.yml  gh-pages-deploy.yml
Artifacts/: .SRCINFO  PKGBUILD
Engine/Engine/: index.html
Game/GPhaseSystem/: index.html
cmake/: linux-compiler-i386-multilib.cmake  recursive.cmake
common/: CMakeLists.txt  CONFIG.h  flags.h
common/file/: file_util.cpp  file_util.h
common/logging/: printing.cpp  printing.h  setup.cpp  setup.h
common/logging/spdlog/: CMakeLists.txt
common/math/: VectorMath.cpp  VectorMath.h
docs/: Build.md  CNAME  Fatal Frame 1.md  index.md
docs/Engine/: Engine.md  SGD
docs/Game/: GPhaseSystem.md
engine/: CMakeLists.txt  FatalData.h  PS2_HARDWARE_CONFIG.h  fade.cpp  fade.h  message.cpp  message.h
engine/Header/: Camera.h  Math.h  gra3dSGDData.h  sceVu0.h  sgdTypes.h
engine/VU/: sceVu0.cpp  sceVu0.h
engine/Vif1/: dmaVif1.cpp  dmaVif1.h
engine/camera/: Camera.h  camera.cpp  camera.h
engine/controller/: Evdev.cpp  Evdev.h  GameInput.cpp  GameInput.h  PS2Controller.h
engine/docs/: FatalFrame2Doc.md  TextureMapping.md
engine/enemy/: EnemyData.cpp  EnemyData.h
engine/entity/: enemy.cpp  enemy.h
engine/fs/: eecdvd.cpp  eecdvd.h  file.cpp  file.h  fileLoadGlobals.h  iopsys.h
engine/g2d/: g2d_draw.cpp  g2d_draw.h  g2d_main.cpp  g2d_main.h
engine/g3d/: g3dCore.cpp  g3dCore.h  g3dRenderTarget.cpp  g3dRenderTarget.h
engine/gfx/: AppWindow.cpp  AppWindow.h  GFX_CONFIG.h  glf3_render.cpp  glf3_render.h
engine/gra3d/: draw_env.cpp  draw_env.h  gra3d.cpp  gra3d.h  gra3dSGD.cpp  gra3dSGD.h  gra3dSGDData.cpp  gra3dSGDData.h  scratchpad.h  sgdTypes.h
engine/math/: PS2Math.h  sceVu0.cpp  sceVu0.h
engine/memory/: heap.cpp  heap.h  memory.cpp  memory.h
engine/sgd/: sgdGlobals.cpp  sgdGlobals.h  sgdLoader.cpp  sgdLoader.h  sgdRender.cpp  sgdRender.h  sgdTypes.h  sgd_globals.cpp  sgd_globals.h  sgd_loader.cpp  sgd_loader.h  sgd_render.cpp  sgd_render.h  sgd_types.h
engine/src/: gra3dSGDData.cpp  sceVu0.cpp
engine/texture/: EBO.cpp  EBO.h  Sprite.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  ZeroShader.cpp  ZeroShader.h  tim2.cpp  tim2.h
extractor/: CMakeLists.txt  extractor.cpp  extractor.h
game/: CMakeLists.txt  fade.cpp  fade.h  gameFunctions.cpp  gameFunctions.h  game_main.cpp  game_main.h  glob.h  gphase.cpp  gphase.h  gphaseData.h  gphase_data.h  gphase_types.h  ingame.cpp  ingame.h
game/MemoryCard/: autoload.cpp  autoload.h  mc.cpp  mc.h  mc_check_card.cpp  mc_set_data.cpp  mc_set_data.h
game/finder/: finder.cpp  finder.h
game/flag/: clear_flg.cpp  clear_flg.h
game/g2d/: g2d_draw.cpp  g2d_main.cpp
game/gphase/: gphase.cpp  gphase.h  gphase_data.h  gphase_types.h
game/logo/: logo_main.cpp  logo_main.h
game/mc/: autoload.cpp  autoload.h  mc.cpp  mc.h  mc_check.cpp  mc_check.h  mc_check_card.cpp  mc_check_card.h  mc_check_dir.cpp  mc_check_dir.h  mc_set_data.cpp  mc_set_data.h
game/menu/: logo_main.cpp  logo_main.h  menu_main.cpp  menu_main.h  title_menu.cpp  title_menu.h
game/player/: plyr_mdl.cpp  plyr_mdl.h
game/scene/: scene.cpp  scene.h  scene_effect.cpp  scene_effect.h
game/system/: glob.h  option.cpp  option.h  system.cpp  system.h  system_types.h
game_files/: README.md
header/: glf3_render.h  imgui_render.h  window.h
render/: CMakeLists.txt  glf3_render.cpp  glf3_render.h  shader.h  stb_image.h
resources/: icon.rc  shader.fs  shader.vert  testTexture_256x128.tm2  testTexture_256x256.tm2
reversing/: fatal_frame_2_functions.h  fatal_frame_2_globals.h  fatal_frame_2_types.h  file_memory_address.md  functions_definitions.h  globals_definitions.h  symbols_definitions.h
search/: search_index.json
src/: file_picker.cpp  glf3_render.cpp  imgui_render.cpp  imgui_render.h  main.cpp  window.cpp
src/engine/: CMakeLists.txt  Math.h  sgd.cpp  sgd.h  sgdTypes.h
tools/ExportStruct/: CMakeLists.txt  exportStruct.cpp
ui/: CMakeLists.txt  FilePicker.cpp  FilePicker.h  FileSelector.cpp  FileSelector.h  MainWindow.cpp  MainWindow.h  MemoryViewer.cpp  MemoryViewer.h  TopMenuBar.cpp  TopMenuBar.h  file_picker.cpp  file_picker.h  imgui_render.cpp  imgui_render.h  window.cpp  window.h
zero_rom/: CMakeLists.txt
zero_rom/assets/: README.md
zero_rom/zero2np/sce/: klib.cpp  klib.h  sce_types.h
zero_rom/zero2np/src/common/: basic_types.h  heapctrl.cpp  heapctrl.h  mem_util.cpp  mem_util.h  my_malloc.cpp  my_malloc.h  ol_load.cpp  ol_load.h  packfile.cpp  packfile.h  utility2.cpp  utility2.h
zero_rom/zero2np/src/common/logging/: logging.cpp  logging.h
zero_rom/zero2np/src/debug/: debug.cpp  debug.h  debug_menu.cpp  debug_menu.h  mem_dbg.cpp  mem_dbg.h  perf_measure.cpp  perf_measure.h  zero2_perf.cpp  zero2_perf.h
zero_rom/zero2np/src/graphics/graph2d/: message.cpp  message.h
zero_rom/zero2np/src/graphics/graph3d/: g3dCore.cpp  g3dCore.h  g3dDebug.cpp  g3dDebug.h  g3dUtil.h  gra3d.cpp  gra3d.h  gra3dDma.cpp  gra3dDma.h  gra3dSGD.cpp  gra3dSGD.h  gra3dSGDData.cpp  gra3dSGDData.h  gra3dShadow.cpp  gra3dShadow.h  sgd_types.h
zero_rom/zero2np/src/ingame/: ingame.cpp  ingame.h
zero_rom/zero2np/src/ingame/loading/: loading.cpp  loading.h
zero_rom/zero2np/src/ingame/map/: MapSave.cpp  MapSave.h
zero_rom/zero2np/src/ingame/plyr/: plyr_mdl.cpp  plyr_mdl.h
zero_rom/zero2np/src/main/: glob.cpp  glob.h  gphase.cpp  gphase.h  main.cpp  main.h
zero_rom/zero2np/src/outgame/: logo.cpp  logo.h  mission_sel.cpp  mission_sel.h  option.cpp  option.h  title.cpp  title.h
zero_rom/zero2np/src/system/eeiop/: cddat.cpp  cddat.h  ee_iop.cpp  ee_iop.h  snd.cpp  snd.h  snd_3d.cpp  snd_3d.h  snd_bank.cpp  snd_bank.h
zero_rom/zero2np/src/system/os/: system.cpp  system.h
zero_rom/zero2np/src/system/pad/: key_cnf.cpp  key_cnf.h  pad.cpp  pad.h
zero_rom/zero2np/src/system/playpss/: playpss.cpp  playpss.h
zero_rom/zero2np/system/: system.h
zero_rom/zero2np/system/os/: system.cpp  system.h
(+7 files in other folders)
